Added more OR in the app

--- a/truthOrDare.html
+++ b/truthOrDare.html
@@ -18,7 +18,7 @@
             <div class="container-one-div same">
                 <div class="con-sub-one">
                     <h1>Truth</h1>
-                    <h3>OR</h3>
+                    <h3>ORR</h3>
                     <h1>Dare</h1>
                 </div>
                 <p id="border1"></p>
